Add xcodeproj and xcworkspace to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@ xcuserdata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,swiftpackagemanager,swiftpm,macos
+
+## Tuist
+
+**/*.xcodeproj
+**/*.xcworkspace
